# media-minion

./: .gitignore  CMakeLists.txt
config/: player_config.json  server_config.json
resources/: mm_player.qrc
src/: StreamIOContext.cpp  StreamIOContext.hpp  demo.cpp
src/media_minion/client/: client.cpp  websocket.cpp  websocket.hpp
src/media_minion/common/: common.cpp  common.hpp  logging.cpp  logging.hpp  result.cpp  result.hpp
src/media_minion/common/coroutine_support/: awaitables.hpp
src/media_minion/player/: audio_player.cpp  audio_player.hpp  configuration.cpp  configuration.hpp  ffmpeg_stream.cpp  ffmpeg_stream.hpp  player.cpp  wav_stream.cpp  wav_stream.hpp
src/media_minion/player/ui/: player_application.cpp  player_application.hpp  tray_icon.cpp  tray_icon.hpp
src/media_minion/server/: any_request.hpp  any_response.hpp  application.cpp  application.hpp  callback_return.hpp  configuration.cpp  configuration.hpp  http_listener.cpp  http_listener.hpp  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  server.cpp  types.hpp  websocket_session.cpp  websocket_session.hpp
src/media_minion/web_client/: test_client.html
src/player/: mm_player.cpp
src/player/ui/: player_tray_icon.cpp  player_tray_icon.hpp
